src/test/deca/context/valid/affectation.deca
{
    float x = 14;
    float b;
    b = x*x - 2;
}