src/test/deca/context/invalid/affect_avant_decla.deca
//ERROR :3:
{
x= 7;
}